--- a/homework_01/homework_01.ipynb
+++ b/homework_01/homework_01.ipynb
@@ -27,12 +27,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5a4d665d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38709\n"
+     ]
+    }
+   ],
    "source": [
-    "# ВАШ КОД ЗДЕСЬ"
+    "tsk1_nmbr = input(\"Введи пятизначное число: \")\n",
+    "part_1 = tsk1_nmbr[0]\n",
+    "part_2 = tsk1_nmbr[1:4][::-1]\n",
+    "part_3 = tsk1_nmbr[4]\n",
+    "tsk1_nmbr = part_1+part_2+part_3\n",
+    "print(tsk1_nmbr)"
    ]
   },
   {
@@ -54,12 +67,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "07154103",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# ВАШ КОД ЗДЕСЬ"
+    "days_until_vacation = int(input(\"Введите количество дней до отпуска: \"))\n",
+    "\n",
+    "current_day = 1  \n",
+    "weekend_days = 2  \n",
+    "weekend_count = 0\n",
+    "\n",
+    "for i in range(days_until_vacation):\n",
+    "    if current_day == 6 or current_day == 7:\n",
+    "        weekend_count += 1\n",
+    "    current_day += 1\n",
+    "    if current_day > 7:\n",
+    "        current_day = 1\n",
+    "\n",
+    "print(weekend_count)"
    ]
   },
   {
@@ -81,12 +115,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "70f3324c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# ВАШ КОД ЗДЕСЬ"
+    "length = int(input(\"Введи длину плитки: \"))\n",
+    "width = int(input(\"Введи ширину плитки: \"))\n",
+    "part_size = int(input(\"Введи размер кусочка: \"))\n",
+    "\n",
+    "whole_size = length * width\n",
+    "\n",
+    "def can_break():\n",
+    "    if length % part_size == 0:\n",
+    "        return True\n",
+    "    if width % part_size == 0:\n",
+    "        return True\n",
+    "    if whole_size % 2 == 0:\n",
+    "        return True\n",
+    "    return False\n",
+    "result = can_break()\n",
+    "print(result)"
    ]
   },
   {
@@ -111,10 +168,43 @@
    "execution_count": null,
    "id": "8686127c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CCXXXV\n"
+     ]
+    }
+   ],
    "source": [
-    "# ВАШ КОД ЗДЕСЬ"
+    "def arabic_to_roman():\n",
+    "    input_num = int(input(\"Введите число: \"))\n",
+    "    arabic_values = [1000, 900, 500, 400, 100, 90, 50, 40, 10, 9, 5, 4, 1]\n",
+    "    roman_values = ['M', 'CM', 'D', 'CD', 'C', 'XC', 'L', 'XL', 'X', 'IX', 'V', 'IV', 'I']\n",
+    "    \n",
+    "    roman = ''  \n",
+    "    i = 0      \n",
+    "    \n",
+    "    while input_num > 0:\n",
+    "        if input_num >= arabic_values[i]:\n",
+    "            roman += roman_values[i]  \n",
+    "            input_num -= arabic_values[i]     \n",
+    "        else:\n",
+    "            i += 1 \n",
+    "    return roman\n",
+    "\n",
+    "result = arabic_to_roman()\n",
+    "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b492052",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -139,21 +229,50 @@
    "execution_count": null,
    "id": "74e39179",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# ВАШ КОД ЗДЕСЬ"
+    "def check_value():\n",
+    "    value = input(\"Введи число: \")\n",
+    "    got_count = 0\n",
+    "    for char in value:\n",
+    "        if char == '.':\n",
+    "            got_count += 1\n",
+    "        if got_count > 1:\n",
+    "            return False\n",
+    "    if value[0] == '-':\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "result = check_value()\n",
+    "print(result)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.11.12)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.12"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
